# module_robot

./: CMakeLists.txt  README.md  rtprint.c
cmake-modules/: CMakeFunctions.cmake  FindXenomai.cmake
include/: common.h
include/elmo_control/: elmo_client.h
include/ethercat_manager/: ecat_dc.h  ethercat_manager.h
include/kinematics_dynamics/: robot_model.h
include/robot_control/: robot_client.h  robot_joint_client.h
include/robot_controller/: descartes_impedance_controller.h  impedance_controller.h  joint_impedance_controler.h  pid_controller.h
qt_ui/: CMakeLists.txt
qt_ui/MotorControl/: CMakeLists.txt  MotorControl.pro  main.cpp  motorcontrol.cpp  motorcontrol.h  motorcontrol.ui  resources.qrc
qt_ui/build-MotorControl-Desktop_Qt_5_12_0_GCC_64bit-Debug/: Makefile  MotorControl  moc_motorcontrol.cpp  qrc_resources.cpp  ui_motorcontrol.h
qt_ui/motorcontrol/: CMakeLists.txt  chart.cpp  chart.h  main.cpp  motorThread.cpp  motorThread.h  motorcontrol.cpp  motorcontrol.h  motorcontrol.pro  motorcontrol.ui  resource.qrc  sentFeedback.cpp  sentFeedback.h  stateplot.cpp  stateplot.h  stateplot.ui
src/: CMakeLists.txt
src/elmo_control/: CMakeLists.txt  elmo_client.cpp
src/ethercat_manager/: CMakeLists.txt  ecat_dc.c  ethercat_manager.cpp
src/kinematics_dynamics/: CMakeLists.txt  robot_model.cpp
src/robot_control/: CMakeLists.txt  robot_client.cpp  robot_joint_client.cpp
src/robot_controller/: CMakeLists.txt  descartes_impedance_controller.cpp  impedance_controller.cpp  joint_impedance_control.cpp  pid_controller.cpp
src/test/: CMakeLists.txt  csp_test.cpp  cst_test.cpp  csv_test.cpp  halt_test.cpp  joint_impedance_control.cpp  joint_impedance_control_test.cpp  pid_test.cpp  pos_test.cpp  pos_test_1.cpp  pp_test.cpp  pt_test.cpp  pv_test.cpp  quick_stop_test.cpp  read_chip_temp.cpp  reset.cpp  robot_client_test.cpp  robot_model_test.cpp  simple_test_csp.cpp  simple_test_cst.cpp  simple_test_csv.cpp  test_response.cpp
src/test/xenomai_test/: CMakeLists.txt  delay_demo.c  rtprint.c  trivial-periodic.c  trivial-periodic.cpp
